cmss/micro-campaign-custom-search/default/objects/CustomSearchFilter__c/CustomSearchFilter__c.object-meta.xml
<CustomObject>
    <label>Custom Search Filter</label>
    <nameField>
        <label>Custom Search Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Search Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>