cmss/micro-campaign-custom-search/default/objects/CustomSearchFilter__c/fields/FieldApiName__c.field-meta.xml
<CustomField>
    <fullName>FieldApiName__c</fullName>
    <label>Field Api Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>