cmss/micro-campaign-custom-search/default/objects/CustomSearchFilter__c/fields/Filter__c.field-meta.xml
<CustomField>
    <fullName>Filter__c</fullName>
    <label>Filter</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;</fullName>
            </value>
            <value>
                <fullName>&gt;</fullName>
            </value>
            <value>
                <fullName>&lt;=</fullName>
            </value>
            <value>
                <fullName>&gt;=</fullName>
            </value>
            <value>
                <fullName>=</fullName>
            </value>
            <value>
                <fullName>exact match</fullName>
            </value>
            <value>
                <fullName>contains</fullName>
            </value>
            <value>
                <fullName>start with</fullName>
            </value>
            <value>
                <fullName>end with</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>