cmss/micro-campaign-custom-search/default/objects/CustomSearchFilter__c/fields/RelatedObject__c.field-meta.xml
<CustomField>
    <fullName>RelatedObject__c</fullName>
    <label>Related Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ObjectType</valueSetName>
    </valueSet>
</CustomField>