cmss/micro-campaign-custom-search/default/objects/CustomSearchFilter__c/recordTypes/Boolean.recordType-meta.xml
<RecordType>
    <fullName>Boolean</fullName>
    <active>true</active>
    <label>Boolean</label>
</RecordType>