cmss/micro-campaign-custom-search/default/objects/CustomSearchFilter__c/recordTypes/Date.recordType-meta.xml
<RecordType>
    <fullName>Date</fullName>
    <active>true</active>
    <label>Date</label>
</RecordType>