cmss/micro-campaign-custom-search/default/objects/CustomSearchFilter__c/recordTypes/Text.recordType-meta.xml
<RecordType>
    <fullName>Text</fullName>
    <active>true</active>
    <label>Text</label>
</RecordType>